--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <header>
+    <head>
+        <title>TODOs</title>
+        <link id="page_favicon" href="favicon.ico" rel="icon" type="image/x-icon">
         <script src="elements/x-storage.js"></script>
         <script src="elements/todo-new.js"></script>
         <script src="elements/todo-item.js"></script>
@@ -40,7 +42,7 @@
                 });
             }
         </script>
-    </header>
+    </head>
     <body onload="onLoad()">
         <x-storage></x-storage>
         <todo-new></todo-new>
