Fixing streak count

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="elements/x-storage.js"></script>
         <script src="elements/todo-new.js"></script>
         <script src="elements/todo-item.js"></script>
+        <script src="elements/google-backup.js"></script>
         <script>
             function onLoad(){
 
@@ -45,6 +46,7 @@
     </head>
     <body onload="onLoad()">
         <x-storage></x-storage>
+        <google-backup></google-backup>
         <todo-new></todo-new>
         <hr>
         <div id='content'></div>
