--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <script src="elements/todo-new.js"></script>
         <script src="elements/todo-item.js"></script>
         <script src="elements/google-backup.js"></script>
+        <link rel="stylesheet" href="fluidable-min.css">
+        <style>
+            body {
+                font-size: 3vh;
+            }
+
+        </style>
+
         <script>
             function onLoad(){
 
@@ -27,6 +35,8 @@
 
                 items.forEach(function (f,i) {
                     const todoItem = document.createElement('todo-item');
+                    todoItem.classList.add("col-12");
+                    todoItem.classList.add("col-dt-3");
                     todoItem.setItem(f);
                     todoItem.update = function(item){
                         items[i] = item;
@@ -49,6 +59,6 @@
         <google-backup></google-backup>
         <todo-new></todo-new>
         <hr>
-        <div id='content'></div>
+        <div id="content" class="col-group"></div>
     </body>
 </html>
