--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 const storage = document.querySelector('x-storage');
                 const todoNew = document.querySelector('todo-new');
                 const content = document.getElementById('content');
+                const today = new Date();
+                today.setHours(0, 0, 0, 0);
+
                 content.innerHTML = '';
 
                 var items = storage.load();
@@ -47,12 +50,12 @@
                         //todoItem.classList.add("col-12");
                         //todoItem.classList.add("col-dt-3");
                         todoItem.setItem(f);
-                        console.log(items);
+
                         todoItem.update = function(item){
                             items[i] = item;
-                            var checked = items.filter(f=> !!f.streakEnd);
-                            var previouslyChecked = items.filter(f=> !f.streakEnd && f.count > 0);
-                            var unchecked = items.filter(f=> !f.streakEnd && f.count == 0);
+                            var checked = items.filter(f=> f.streakEnd?.toDateString() == today.toDateString());
+                            var previouslyChecked = items.filter(f=> f.streakEnd?.toDateString() != today.toDateString() && f.count > 0);
+                            var unchecked = items.filter(f=> f.streakEnd?.toDateString() != today.toDateString() && f.count == 0);
 
                             items = [...checked, ...previouslyChecked, ...unchecked];
                             
